test/reject/rewrite_without_by.alg
sort S;
var x : S;
lemma refl x = x;
proof
  x;
  = x;
qed;
